k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartfaq-api
spec:
  selector:
    app: smartfaq-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
