k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartfaq-api
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.smartfaq.dev.devplus.edu.vn
      secretName: smartfaq-dev-tls
  rules:
    - host: api.smartfaq.dev.devplus.edu.vn
      http:
        paths:
          - backend:
              service:
                name: smartfaq-api
                port:
                  number: 8000
            path: /
            pathType: Prefix
